--- a/templates/checkin_report.html
+++ b/templates/checkin_report.html
@@ -8,14 +8,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <!-- Title -->
     <title>UP-FMS รายงานผู้เข้าใช้สนาม</title>
-    <!-- ให้เบราว์เซอร์รองรับทั้ง light/dark mode -->
+    
     <meta name="color-scheme" content="light dark" />
     <!-- Favicon -->
-    <link
-      rel="icon"
-      href="{% static 'img/Logo_of_University_of_Phayao.svg.png' %}"
-      type="image/png"
-    />
+    <link rel="icon" href="{% static 'img/Logo_of_University_of_Phayao.svg.png' %}" type="image/png"/>
     <!-- Styles Sheet -->
     <link rel="stylesheet" href="{% static 'assets/css/global.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/admin_header.css' %}" />
@@ -23,10 +19,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/checkin_report.css' %}"/>
 
     <!-- Chart.js สำหรับวาดกรา ฟ -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"
-      defer
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js" defer ></script>
 
     <!-- Export: Excel / PDF / DOCX -->
     <script
