แก้ให้ตรงกลาง ใส่header

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -54,7 +54,7 @@
             aria-selected="false"
             data-role="person"
           >
-            นิสิต/บุคลากรทั่วไป
+            นิสิตช่วยงาน
           </button>
           <span class="segmented-indicator" aria-hidden="true"></span>
         </div>
