--- a/templates/checkin_report.html
+++ b/templates/checkin_report.html
@@ -160,13 +160,13 @@
           /></label>
 
           <label>
-    มุมมองเวลา:
-    <select id="timeMode" title="เลือกตัวรวมเวลา">
-      <option value="day">รายวัน</option>
-      <option value="month">รายเดือน</option>
-      <option value="year">รายปี</option>
-    </select>
-  </label>
+            มุมมองเวลา:
+            <select id="timeMode" title="เลือกตัวรวมเวลา">
+              <option value="day">รายวัน</option>
+              <option value="month">รายเดือน</option>
+              <option value="year">รายปี</option>
+            </select>
+          </label>
 
           <label
             >สนาม:
@@ -253,7 +253,7 @@
                 role="tab"
                 aria-selected="true"
               >
-                วงกลม
+                กราฟวงกลม
               </button>
               <button
                 type="button"
@@ -262,7 +262,7 @@
                 role="tab"
                 aria-selected="false"
               >
-                แท่ง
+                กราฟแท่ง
               </button>
               <button
                 type="button"
@@ -271,7 +271,7 @@
                 role="tab"
                 aria-selected="false"
               >
-                เส้น (30 วัน)
+                กราฟเส้น
               </button>
             </div>
 
