--- a/templates/user_menu.html
+++ b/templates/user_menu.html
@@ -24,9 +24,10 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="{% static 'assets/css/user_global.css' %}" />
-    <link rel="stylesheet" href="{% static 'assets/css/user_header.css' %}" />
-    <link rel="stylesheet" href="{% static 'assets/css/user_menu.css'%}" />
+    <link rel="stylesheet" href="{% static 'assets/css/user_global.css' %}?v=20251017a">
+<link rel="stylesheet" href="{% static 'assets/css/user_header.css' %}?v=20251017a">
+<link rel="stylesheet" href="{% static 'assets/css/user_menu.css' %}?v=20251017a">
+
 
     <!-- Scripts -->
     <script src="{% static 'js/menu.js' %}" defer></script>
@@ -201,5 +202,6 @@
         </a>
       </section>
     </main>
+    <div class="footer-bar"></div>
   </body>
 </html>
